--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     },
     "autoload": {
         "psr-4": {
-            "": "vendor\\martinramosbr\\php-classes\\src"
+            "Martinbr\\": "vendor\\martinramosbr\\php-classes\\src"
         }
     }
 }
